# wasmbin

./: .envrc  .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: rust.yml
derive/: Cargo.toml
derive/src/: lib.rs
examples/: dump.rs
src/: io.rs  module.rs  sections.rs  types.rs
src/builtins/: lazy.rs
src/instructions/: exceptions.rs  mod.rs  threads.rs
tests/: spec.rs
