[package]
name = "wasmbin"
version = "0.8.1"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
edition = "2021"
license = "Apache-2.0"
description = "A self-generating WebAssembly parser and serializer"
repository = "https://github.com/RReverser/wasmbin"
categories = ["wasm", "parser-implementations"]
keywords = ["webassembly", "wasm", "parser", "serializer"]

exclude = [
    "tests/testsuite",
    "benches/fixture.wasm",
]

[dependencies]
leb128 = "0.2.5"
thiserror = "1.0.56"
wasmbin-derive = { version = "0.2.2", path = "derive" }
custom_debug = "0.6.0"
once_cell = "1.19.0"

[features]
default = []
proposals = [
    "exception-handling",
    "extended-name-section",
    "multi-memory",
    "tail-call",
    "threads",
]
exception-handling = []
extended-name-section = []
multi-memory = []
tail-call = []
threads = []
nightly = []

[dev-dependencies]
criterion = "0.5.1"
libtest-mimic = "0.7.0"
wast = "70.0.0"
anyhow = { version = "1.0.79", features = ["backtrace"] }
tempfile = "3.9.0"
indexmap = { version = "2.1.0", features = ["rayon"] }
rayon = "1.8.0"
fs-err = "2.11.0"
clap = "4.4.18"

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = true

[[test]]
name = "spec"
harness = false

[workspace]

[package.metadata.docs.rs]
all-features = true
