[package]
name = "wasmbin"
version = "0.8.1"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
edition = "2021"
license = "Apache-2.0"
description = "A self-generating WebAssembly parser and serializer"
repository = "https://github.com/RReverser/wasmbin"
categories = ["wasm", "parser-implementations"]
keywords = ["webassembly", "wasm", "parser", "serializer"]

exclude = [
    "tests/testsuite",
    "benches/fixture.wasm",
]

[dependencies]
leb128 = "0.2.5"
thiserror = "2.0.12"
wasmbin-derive = { version = "0.2.3", path = "derive" }
custom_debug = "0.6.2"
once_cell = "1.21.3"

[features]
default = []
proposals = [
    "exception-handling",
    "extended-name-section",
    "threads",
    "custom-page-sizes",
    "memory64",
]
exception-handling = []
extended-name-section = []
threads = []
custom-page-sizes = []
memory64 = []
nightly = []

[dev-dependencies]
criterion = "0.5.1"
libtest-mimic = "0.8.1"
wast = "229.0.0"
anyhow = { version = "1.0.98", features = ["backtrace"] }
tempfile = "3.19.1"
indexmap = { version = "2.9.0", features = ["rayon"] }
rayon = "1.10.0"
fs-err = "3.1.0"
clap = "4.5.37"

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = true

[[test]]
name = "spec"
harness = false

[workspace]

[package.metadata.docs.rs]
all-features = true
