[package]
name = "wasmbin-derive"
version = "0.2.3"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Derive crate for the wasmbin library"
repository = "https://github.com/RReverser/wasmbin"

[lib]
proc-macro = true

[dependencies]
synstructure = "0.13.2"
quote = "1.0.40"
proc-macro2 = "1.0.95"
syn = "2.0.101"
thiserror = "2.0.12"
